fix message overlap

--- a/app/assets/stylesheets/components/message_list.scss
+++ b/app/assets/stylesheets/components/message_list.scss
@@ -22,6 +22,8 @@
 }
 
 .message-item {
+  // flex: 0;
+  flex-shrink: 0;
   margin-bottom: 5px;
   max-width: 70%;
   min-height: auto;
